Created api for few fixed dimensions and custom dimension

--- a/rough.ipynb
+++ b/rough.ipynb
@@ -163,14 +163,160 @@
     }
    ],
    "source": [
-    "a=\"(40,40)\"\n",
-    "tuple(a)"
+    "a=\"(40,40)\"tuple(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3cf3fd76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33 44\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[33, 44]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=input()\n",
+    "a=a.split()\n",
+    "b=[]\n",
+    "for i in a:\n",
+    "    b.append(int(i))\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "51a392d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#if my input is 30, 44, 33, 22, 44, 33. The input no shuld be even\n",
+    "# Then the out put should be [(30,44),(33,22),(44,33)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e104cba5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30, 44)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[30, 44]\n",
+    "a=tuple(a)\n",
+    "a\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "70ced4d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 44\n",
+      "33 22\n",
+      "44 33\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a=\"30 44 33 22 44 33\"\n",
+    "# a=a.split() \n",
+    "a=['30', '44', '33', '22', '44', '33']\n",
+    "b=[]\n",
+    "for i in range(0,len(a),2):\n",
+    "    print(a[i],a[i+1])\n",
+    "#     b.append(list(a[i] a[i+1]))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9038907f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[23, 34, 33, 55]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a={\"name\":\"bapi\",\"age\": [23,34,33,55]}\n",
+    "a[\"age\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "cfe30f44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"data\": [33]}\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "# a=\"[{\\\"_id\\\": {\\\"$oid\\\": \\\"638de528b02aabb14176dc7a\\\"}, \\\"dimension\\\": [[450, 300], [500, 500], [400, 400], [567, 567]]}]\"\n",
+    "\n",
+    "# a=json.loads(a)\n",
+    "# print(type(a))\n",
+    "\n",
+    "b={'data':[33]}\n",
+    "b=json.dumps(b)\n",
+    "print(b)\n",
+    "print(type(b))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cf3fd76",
+   "id": "ec0b7ba8",
    "metadata": {},
    "outputs": [],
    "source": []
